# sdmx-schemas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
sdmxschemas/: __init__.py
sdmxschemas/xml/sdmx31/: SDMXCommon.xsd  SDMXStructure.xsd  SDMXStructureMetadataStructure.xsd
src/sdmxschemas/: __init__.py
src/sdmxschemas/xml/sdmx31/: SDMXCommonReferences.xsd  SDMXDataStructureSpecific.xsd  SDMXMessage.xsd  SDMXMessageFooter.xsd  SDMXMetadataGeneric.xsd  SDMXRegistry.xsd  SDMXRegistryBase.xsd  SDMXRegistryRegistration.xsd  SDMXRegistryStructure.xsd  SDMXRegistrySubscription.xsd  SDMXStructureBase.xsd  SDMXStructureCategorisation.xsd  SDMXStructureCategory.xsd  SDMXStructureCodelist.xsd  SDMXStructureConcept.xsd  SDMXStructureConstraint.xsd  SDMXStructureDataStructure.xsd  SDMXStructureDataflow.xsd  SDMXStructureHierarchicalCodelist.xsd  SDMXStructureMetadataflow.xsd  SDMXStructureOrganisation.xsd  SDMXStructureProcess.xsd  SDMXStructureProvisionAgreement.xsd  SDMXStructureReportingTaxonomy.xsd  SDMXStructureStructureMappings.xsd  SDMXStructureTransformation.xsd
tests/: test_reading_schemas.py
