[project]
name = "sdmxschemas"
version = "1.0.0"
description = "Python wrapper for SDMX Schemas"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "MeaningfulData", email = "info@meaningfuldata.eu"},
]
maintainers = [
    {name = "Francisco Javier Hernandez del Caño", email = "javier.hernandez@meaningfuldata.eu"},
    {name = "Jose Antonio Franco Martin", email = "jose.franco@meaningfuldata.eu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed"
]
keywords = ['sdmx']

[project.urls]
Repository = "https://github.com/Meaningful-Data/sdmx-schemas"
MeaningfulData = 'https://www.meaningfuldata.eu/'
SDMX = 'https://sdmx.org'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
